--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,10 @@
     <artifactId>hentaibot</artifactId>
     <version>0.0.1-SNAPSHOT</version>
 
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>com.sobte.cqp</groupId>
@@ -25,6 +29,7 @@
             <version>1.2.46</version>
         </dependency>
     </dependencies>
+
 
     <build>
         <finalName>${project.groupId}.${project.artifactId}</finalName>
